--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -13,10 +13,9 @@ html {
   margin: 0;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   min-height: -webkit-fill-available;
-  min-width: -webkit-fill-available;
   // overflow: hidden;
 }
 
