--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -15,7 +15,7 @@ html {
   touch-action: manipulation;
   width: 100%;
   height: 100%;
-  min-height: -webkit-fill-available;
+  // min-height: -webkit-fill-available;
   // overflow: hidden;
 }
 
