--- a/public/scss/_shared.scss
+++ b/public/scss/_shared.scss
@@ -13,7 +13,7 @@ html {
   margin: 0;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   // min-height: -webkit-fill-available;
   // overflow: hidden;
@@ -30,7 +30,7 @@ body {
   width: 100% ;
   height: 100%;
    min-height: -webkit-fill-available;
-   min-width:fit-content;
+  //  min-width:fit-content;
 }
 
 /* Game Container Styles */
