--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -44,6 +44,20 @@
       }
 
 }
+@media screen and (orientation:landscape) and (max-width:580px) {
+
+.hi,.welcome-header{
+    display:none;
+    // font-size:18px;
+}
+}
+@media screen and (orientation:portrait) and (max-height:450px) {
+
+    .hi,.welcome-header{
+        display:none;
+        // font-size:18px;
+    }
+    }
 @media screen and (max-width:330px) {
 
     .google-block {
@@ -953,7 +967,11 @@
     // display: flex;
     flex-direction: row;
 }
-// body{
-//     min-width:100vw;
-// }
+html{
+    position:absolute;
+    top:0;
+    left:0;
+    min-width:100vw;
+    min-height:100%;
+}
 }
