--- a/public/scss/_media.scss
+++ b/public/scss/_media.scss
@@ -20,30 +20,41 @@
         text-align: center;
         padding: 5px;
 
+        &:hover {
+            background-color: white;
+
+
+            padding: 5px;
+        }
     }
+
+
     .expanded-menu a {
         color: $chalkboard-green;
         text-decoration: none;
         font-size: 15px;
-      }
-      
-      
-    .login-welcome-message{
-        display:none;
     }
-    .privacy-inner-container{
-        margin-top:12vh;
-        margin-bottom:10vh;
-        
-        width:75vw;
-        height:65vh;
-        overflow-y:scroll;
-        &>span{
-          color:$chalk-white !important;
+
+
+    .login-welcome-message {
+        display: none;
+    }
+
+    .privacy-inner-container {
+        margin-top: 12vh;
+        margin-bottom: 10vh;
+
+        width: 75vw;
+        height: 65vh;
+        overflow-y: scroll;
+
+        &>span {
+            color: $chalk-white !important;
         }
-      }
+    }
 
 }
+
 @media screen and (max-width:330px) {
 
     .google-block {
@@ -65,10 +76,12 @@
     .profile-user-section {
         flex-basis: 33.33%;
     }
-    .profile-lower-left{
+
+    .profile-lower-left {
         max-height: calc(100vh - 130px);
         margin-top: calc(3vh + 60px);
     }
+
     .badges {
         margin: 20px;
         grid-template-columns: repeat(3, 1fr);
@@ -76,16 +89,19 @@
 
         max-width: fit-content;
     }
-    .avatar-user-icons{
-        grid-template-columns: repeat(4,1fr);
+
+    .avatar-user-icons {
+        grid-template-columns: repeat(4, 1fr);
     }
-    .avatar-modal-header{
-        > h2{
-            font-size:18px;
+
+    .avatar-modal-header {
+        >h2 {
+            font-size: 18px;
         }
     }
-    .avatar-modal-content{
-        max-width:400px;
+
+    .avatar-modal-content {
+        max-width: 400px;
     }
 
 }
@@ -93,7 +109,7 @@
 
 
 
-@media  screen and (max-aspect-ratio:1.75) and (orientation:portrait) {
+@media screen and (max-aspect-ratio:1.75) and (orientation:portrait) {
     /* CSS code for tablet devices */
 
     .header {
@@ -203,71 +219,91 @@
         margin-top: 50px;
         margin-bottom: 0px;
     }
-    .landing-choice{
-        width:90px;
-        height:90px;
-        margin:0;
-    }
-    .header-text,.activity-title,.activity-type{
-        font-size:22px;
-        padding-bottom:20px;
+
+    .landing-choice {
+        width: 90px;
+        height: 90px;
+        margin: 0;
     }
 
-    #range-input{
-        margin:30px 0;
-        min-width:80vw;
+    .header-text,
+    .activity-title,
+    .activity-type {
+        font-size: 22px;
+        padding-bottom: 20px;
     }
-    .mc-middle-lower{
+
+    #range-input {
+        margin: 30px 0;
+        min-width: 80vw;
+    }
+
+    .mc-middle-lower {
         max-width: inherit;
         max-height: inherit;
     }
-    .mc-top{
-        padding-bottom:initial;
+
+    .mc-top {
+        padding-bottom: initial;
     }
 }
 
 @media screen and (orientation:portrait) and (max-height: 570px) {
-    .welcome-header-index{
-        display:none;
+    .welcome-header-index {
+        display: none;
     }
 
-    .mc-question{
-        font-size:2em;
+    .mc-question {
+        font-size: 2em;
     }
-    .question{
-        height:auto;
-        font-size:1.6em;
+
+    .question {
+        height: auto;
+        font-size: 1.6em;
     }
-    .operator-menu-container,.mc-quiz-container {
+
+    .operator-menu-container,
+    .mc-quiz-container {
         justify-content: flex-end;
-        padding-bottom:20px;
-        
+        padding-bottom: 20px;
+
     }
+
     .game-top,
     .flash-upper {
         margin-bottom: 0vh;
     }
-   .activity-title, .activity-group{
-        font-size:22px;
-        padding-bottom:0px;
+
+    .activity-title,
+    .activity-group {
+        font-size: 22px;
+        padding-bottom: 0px;
     }
-    .high-title,.score-title{
-        line-height:normal
+
+    .high-title,
+    .score-title {
+        line-height: normal
     }
-    .score-text,.level-number{
-        font-size:1.1em;
+
+    .score-text,
+    .level-number {
+        font-size: 1.1em;
     }
-    .progress-container{
-         padding: 3px 10px 0 10px;
+
+    .progress-container {
+        padding: 3px 10px 0 10px;
     }
-    .level-container > *{
-        font-size:1.1em;
+
+    .level-container>* {
+        font-size: 1.1em;
     }
-    .score-container{
-        margin-top:0;
+
+    .score-container {
+        margin-top: 0;
     }
-    .game-question{
-        padding:4px;
+
+    .game-question {
+        padding: 4px;
     }
 }
 
@@ -287,6 +323,7 @@
         max-width: none;
     }
 }
+
 @media screen and (min-width: 768px) {
     .profile-section {
         flex-direction: column;
@@ -306,7 +343,7 @@
 
 
 
-@media  screen and (max-width:580px) and (orientation:landscape) {
+@media screen and (max-width:580px) and (orientation:landscape) {
 
     .login-top,
     .signup-header {
@@ -354,36 +391,47 @@
     .flash-upper {
         margin-bottom: 0vh;
     }
-   .activity-title, .activity-group{
-        font-size:22px;
-        padding-bottom:0px;
+
+    .activity-title,
+    .activity-group {
+        font-size: 22px;
+        padding-bottom: 0px;
     }
-    .high-title,.score-title{
-        line-height:normal
+
+    .high-title,
+    .score-title {
+        line-height: normal
     }
-    .score-text,.level-number{
-        font-size:1.1em;
+
+    .score-text,
+    .level-number {
+        font-size: 1.1em;
     }
-    .progress-container{
-         padding: 3px 10px 0 10px;
+
+    .progress-container {
+        padding: 3px 10px 0 10px;
     }
-    .level-container > *{
-        font-size:1.1em;
+
+    .level-container>* {
+        font-size: 1.1em;
     }
-    .score-container{
-        margin-top:0;
+
+    .score-container {
+        margin-top: 0;
     }
-    .game-question{
-        padding:4px;
+
+    .game-question {
+        padding: 4px;
     }
-    .game-lower{
-        max-width:40vw;
+
+    .game-lower {
+        max-width: 40vw;
 
     }
 }
 
 
-@media  screen and (max-width:900px) and (orientation:landscape) {
+@media screen and (max-width:900px) and (orientation:landscape) {
 
     .divider {
         display: none;
@@ -447,38 +495,49 @@
         flex-direction: column;
         justify-content: center;
     }
-    .score-container{
-        margin-top:0;
+
+    .score-container {
+        margin-top: 0;
     }
-    .high-title,.score-title{
-        line-height:normal
+
+    .high-title,
+    .score-title {
+        line-height: normal
     }
-    .score-text,.level-number{
-        font-size:1.1em;
+
+    .score-text,
+    .level-number {
+        font-size: 1.1em;
     }
-    .progress-container{
-         padding: 3px 10px 0 10px;
+
+    .progress-container {
+        padding: 3px 10px 0 10px;
     }
-    .level-container > *{
-        font-size:1.1em;
+
+    .level-container>* {
+        font-size: 1.1em;
     }
-    .score-container{
-        margin-top:0;
+
+    .score-container {
+        margin-top: 0;
     }
-    .game-question{
-        padding:4px;
+
+    .game-question {
+        padding: 4px;
     }
-    .game-lower{
-        max-width:40vw;
+
+    .game-lower {
+        max-width: 40vw;
 
     }
-    .question-box{
+
+    .question-box {
         flex-direction: column;
     }
 }
 
 
-@media  screen and (max-height:580px) and (orientation:landscape) {
+@media screen and (max-height:580px) and (orientation:landscape) {
 
     .divider {
         display: none;
@@ -550,7 +609,7 @@
 
 
 // Mobile Landscape (max-width:1000px)
-@media  screen and (orientation:landscape) and (min-aspect-ratio:1.75) {
+@media screen and (orientation:landscape) and (min-aspect-ratio:1.75) {
 
     .header {
         width: 200px;
@@ -558,10 +617,12 @@
         justify-content: center;
         display: flex;
     }
-    .welcome-top{
+
+    .welcome-top {
         padding-right: 25px;
 
     }
+
     .activity-menu-container,
     .operator-menu-container,
     .difficulty-menu-container,
@@ -724,10 +785,11 @@
     .icon-container {
         width: 65px;
         height: 65px;
-        margin:5px;
+        margin: 5px;
     }
-    body{
-        width:100vw;
+
+    body {
+        width: 100vw;
     }
 }
 
@@ -736,7 +798,7 @@
 
 
 
-@media  screen and (orientation:landscape) and (max-height:720px) and (min-aspect-ratio:1.75) {
+@media screen and (orientation:landscape) and (max-height:720px) and (min-aspect-ratio:1.75) {
     .inner {
         margin: 0 10px;
     }
@@ -744,15 +806,17 @@
     .header {
         font-size: 24px;
     }
-    .hi,.welcome-header{
+
+    .hi,
+    .welcome-header {
         // display:none;
-        font-size:18px;
+        font-size: 18px;
     }
 }
 
 
 //  (min-width:720px)
-@media  screen and (orientation:landscape)and (min-width:600px) and (max-aspect-ratio:1.75) {
+@media screen and (orientation:landscape)and (min-width:600px) and (max-aspect-ratio:1.75) {
 
     .activity-menu-container,
     .operator-menu-container,
@@ -784,7 +848,7 @@
 
     .icon-text,
     .operator-text {
-        font-size: 24px;
+        font-size: 20px;
     }
 
     .bottom {
@@ -800,7 +864,7 @@
     }
 
     .icon {
-        font-size: 3.75em;
+        font-size: 3em;
     }
 
     .flash-upper {
@@ -936,38 +1000,47 @@
         margin-top: 0;
     }
 }
+
 @media screen and (min-width:768px) and (max-height:500px) {
-    .profile-section{
-        flex-direction:row;
+    .profile-section {
+        flex-direction: row;
     }
 }
-@media  screen and (orientation:landscape) {
+
+@media screen and (orientation:landscape) {
 
 
-.activity-menu-container,
-.operator-menu-container,
-.difficulty-menu-container,
-.game-middle-lower,
-.real-menu-container,
-.practice-menu-container {
-    // display: flex;
-    flex-direction: row;
+    .activity-menu-container,
+    .operator-menu-container,
+    .difficulty-menu-container,
+    .game-middle-lower,
+    .real-menu-container,
+    .practice-menu-container {
+        // display: flex;
+        flex-direction: row;
+    }
+
+    // body{
+    //     min-width:100vw;
+    // }
 }
-// body{
-//     min-width:100vw;
-// }
-}
+
 @media screen and (orientation:landscape) and (max-width:580px) {
 
-    .hi,.welcome-header{
-        display:none;
+    .hi,
+    .welcome-header,
+    .welcome-header-index {
+        display: none;
         // font-size:18px;
     }
+}
+
+@media screen and (orientation:portrait) and (max-height:450px) {
+
+    .hi,
+    .welcome-header,
+    .welcome-header-index {
+        display: none;
+        // font-size:18px;
     }
-    @media screen and (orientation:portrait) and (max-height:450px) {
-    
-        .hi,.welcome-header{
-            display:none;
-            // font-size:18px;
-        }
-        }
+}
